--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       const app = {
         type: 'app',
-        brandName: 'Admin',
+        brandName: '磐石平台',
         logo: '/public/logo.png',
         header: {
           type: 'tpl',
