--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-  <link rel="stylesheet" title="default" href="https://unpkg.com/amis@beta/sdk/sdk.css" />
+  <link rel="stylesheet" title="default" href="https://unpkg.com/amis@beta/sdk/antd.css" />
   <link rel="stylesheet" href="https://unpkg.com/amis@beta/sdk/helper.css" />
   <script src="https://unpkg.com/amis@beta/sdk/sdk.js"></script>
   <script src="https://unpkg.com/vue@2"></script>
@@ -174,7 +174,7 @@
             }
           },
           isCurrentUrl: isCurrentUrl,
-          theme: 'cxd'
+          theme: 'antd'
         }
       );
 
