feat: add prefix /quality

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       const app = {
         type: 'app',
         brandName: '磐石平台',
-        logo: '/public/logo.png',
+        logo: '/quality/public/logo.png',
         header: {
           type: 'tpl',
           inline: false,
@@ -49,7 +49,7 @@
         // footer: '<div class="p-2 text-center bg-light">底部区域</div>',
         // asideBefore: '<div class="p-2 text-center">菜单前面区域</div>',
         // asideAfter: '<div class="p-2 text-center">菜单后面区域</div>',
-        api: '/api/site.json'
+        api: '/quality/api/site.json'
       };
 
       function normalizeLink(to, location = history.location) {
